# TestTask

ImageViewerQt/: CMakeLists.txt  CMakeLists.txt.user.3a37ebe  EnterPath.qml  enterpathwin.cpp  enterpathwin.h  enterpathwin.ui  gaussianblur.cpp  gaussianblur.h  imageviewer.cpp  imageviewer.h  imageviewer.ui  readme.md  rgbsliders.cpp  rgbsliders.h  rgbsliders.ui  saveresult.cpp  saveresult.h  saveresult.ui  setcontrast.cpp  setcontrast.h  setcontrast.ui  translate.cpp  translate.h  translate.ui
build-test_task-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  test_task
build-test_task-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-7f3dd5b29c1df4007e2f.json  cmakeFiles-v1-ae8121dc378fa7395718.json  codemodel-v2-bf41a1f2edfb5b079620.json  index-2023-07-05T19-44-38-0422.json  target-test_task-Debug-24548f5f9235fce446be.json  target-test_task_autogen-Debug-2f1afed10459d43e6422.json  target-test_task_autogen_timestamp_deps-Debug-4409529d1288a91b8d20.json
build-test_task-Desktop-Debug/test_task_autogen/: deps
build-test_task-Desktop-Debug/test_task_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
test_task/: CMakeLists.txt  mainwindow.h  test_task_ru_RU.ts
